fix: N+1 문제 해결